[tool.poetry]
name = "pdfp"
version = "0.0.2"
description = "PDF Processor - a GUI for some common PDF operations."
authors = ["Dreary <drearywillowdev@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pyperclip = "^1.5.0"
PySide6 = "^6.5.0"
pypdf = "^4.2.0"

[tool.poetry.scripts]
pdfp = "pdfp.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
