[tool.poetry]
name = "pdfp"
version = "0.2.1"
description = "PDF Processor - a GUI for some common PDF operations."
authors = ["Dreary <drearywillowdev@gmail.com>"]
license = "AGPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/MellowKyler/pdfp"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
PySide6 = "^6.5.0"
pymupdf = "^1.24.7"
gtts = "^2.5.1"
ocrmypdf = "^16.4.1"
send2trash = "^1.8.3"

[tool.poetry.scripts]
pdfp = "pdfp.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
Source = "https://github.com/MellowKyler/pdfp"
Issues = "https://github.com/MellowKyler/pdfp/issues"
PyPi = "https://pypi.org/project/pdfp/"
